Closed Bug 1196089 Opened 10 years ago Closed 5 years ago

Strings passed to setTimeout/Interval do not have an introductionType set

Categories

(DevTools :: Debugger, defect, P2)

38 Branch
defect

Tracking

(firefox80 fixed)

RESOLVED FIXED
Firefox 80
Tracking Status
firefox80 --- fixed

People

(Reporter: onefling8, Assigned: loganfsmyth)

References

(Blocks 1 open bug)

Details

(Whiteboard: [polish-backlog][difficulty=medium])

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:38.0) Gecko/20100101 Firefox/38.0 Build ID: 20150511103946 Steps to reproduce: 1. point the browser to http://makermade.github.io/jstest1/ 2. wait the content loaded 3. click Developer > Debugger, and click the emulate.js from the site Actual results: the Debugger does not show the source code of emulate.js Expected results: the Debugger should show the source code of emulate.js. I have tried with IE/safari/chrome, all of them work well.
Component: Untriaged → Developer Tools: Debugger
Interesting, it looks like we are showing a source eval'd by the "main" source rather than that "main" source. I get > animate(55) as the source contents, and if you right click and grab the source's reported URL and open that in a new tab, you get a different source content, but this line near the bottom: > setTimeout('animate('+n+')',50); Which is where I suspect the source that is actually shown is coming from. Most likely a bug with our filtering of eval'd sources + somewhere where we are still keying by URL and getting the wrong thing.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: [polish-backlog][difficulty=medium]
Assignee: nobody → jlong
Assignee: jlong → nobody
Priority: -- → P3
Product: Firefox → DevTools
Priority: P3 → P5
Summary: Debugger does not show the js source which include a endless loop → Strings passed to setTimeout/Interval do not have an introductionType set
Priority: P5 → P2
Assignee: nobody → loganfsmyth
Status: NEW → ASSIGNED
Pushed by loganfsmyth@gmail.com: https://hg.mozilla.org/integration/autoland/rev/4b2c7b2f3222 Treat script sources introduced by DOM timers as anonymous. r=davidwalsh https://hg.mozilla.org/integration/autoland/rev/5202ada0cf1d Treat javascript: scripts as anonymous sources. r=davidwalsh
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 80
QA Whiteboard: [qa-80b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: