Bug 1196089 - Treat script sources introduced by DOM timers as anonymous. r=davidwalsh

Differential Revision: https://phabricator.services.mozilla.com/D83410